[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/rabbit_ninja.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/weapons.png" type="Texture" id=2]
[ext_resource path="res://Src/Enemies/Ninja.gd" type="Script" id=3]
[ext_resource path="res://Resources/WhiteFlash.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/white_progress = 0.0

[sub_resource type="Animation" id=4]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.61037, 7.62833 )

[sub_resource type="Animation" id=9]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -224.0 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 1.375 )

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[node name="Ninja" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
script = ExtResource( 3 )
max_speed = 100.0

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
texture = ExtResource( 1 )
offset = Vector2( 2, -4 )
vframes = 3
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.314987, 0.314983 )
shape = SubResource( 6 )

[node name="Sword" type="Sprite" parent="."]
position = Vector2( -0.125, 2.875 )
rotation = -3.90954
texture = ExtResource( 2 )
offset = Vector2( -2.75, -2.875 )
vframes = 3
hframes = 5
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sword"]
anims/Hit = SubResource( 9 )

[node name="Area2D" type="Area2D" parent="Sword"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/Area2D"]
position = Vector2( -11.1362, 0.723856 )
shape = SubResource( 8 )
disabled = true

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )

[node name="ComputeDirectionTimer" type="Timer" parent="."]
one_shot = true

[node name="ResumeAttackTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Sword/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ComputeDirectionTimer" to="." method="_on_ComputeDirectionTimer_timeout"]
[connection signal="timeout" from="ResumeAttackTimer" to="." method="_on_ResumeAttackTimer_timeout"]
